External Rift dependency added

--- a/.gitmodules
+++ b/.gitmodules
@@ -10,3 +10,6 @@
 [submodule "ext/glfw"]
 	path = ext/glfw
 	url = https://github.com/glfw/glfw
+[submodule "ext/ovr"]
+	path = ext/ovr
+	url = https://github.com/jherico/OculusSDK
