--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -71,6 +71,7 @@ include_directories(
 	ext/filesystem
 	ext/stb_image
 	ext/ovr/LibOVR/include
+	ext/ovr/LibOVR/include/Extras
 	include
 	${CMAKE_BINARY_DIR}
 )
