--- a/.gitmodules
+++ b/.gitmodules
@@ -3,7 +3,7 @@
 	url = https://github.com/RLovelett/eigen
 [submodule "ext/tinyformat"]
 	path = ext/tinyformat
-	url = https://github.com/c42f/tinyformat
+	url= https://github.com/nicoprevitali/tinyformat
 [submodule "ext/filesystem"]
 	path = ext/filesystem
 	url = https://github.com/wjakob/filesystem
