Line.cpp : Draw line between the bone joints

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -106,6 +106,7 @@ add_executable(VRMeshViewer
 	include/leap/LeapListener.hpp
 	include/mesh/Cube.hpp
 	include/mesh/Sphere.hpp
+	include/mesh/Line.hpp
 	include/Settings.hpp
 	include/leap/SkeletonHand.hpp
 	include/leap/GestureHandler.hpp
@@ -122,6 +123,7 @@ add_executable(VRMeshViewer
 	src/leap/LeapListener.cpp
 	src/mesh/Cube.cpp
 	src/mesh/Sphere.cpp
+	src/mesh/Line.cpp
 	src/Settings.cpp
 	src/leap/SkeletonHand.cpp
 	src/leap/GestureHandler.cpp
