--- a/.gitmodules
+++ b/.gitmodules
@@ -13,3 +13,6 @@
 [submodule "ext/asio"]
 	path = ext/asio
 	url = https://github.com/chriskohlhoff/asio/
+[submodule "ext/nanogui"]
+	path = ext/nanogui
+	url = https://github.com/nicoprevitali/nanogui
