--- a/.gitmodules
+++ b/.gitmodules
@@ -9,7 +9,7 @@
 	url = https://github.com/glfw/glfw
 [submodule "ext/ovr"]
 	path = ext/ovr
-	url=https://github.com/nicoprevitali/OculusSDK
+	url=https://github.com/jherico/OculusSDK
 [submodule "ext/asio"]
 	path = ext/asio
 	url = https://github.com/chriskohlhoff/asio/
